quick and dirty hack to fix date alignment

--- a/static/overrides/css/overrides.css
+++ b/static/overrides/css/overrides.css
@@ -9,6 +9,10 @@
   color: inherit;
 }
 
+div.post {
+  padding-left: 15px;
+}
+
 [data-theme=dark] {
   --background-color: #1a1b26;
   --font-color: #c1caf4;
